--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: CS373 Spring 2016: Shanell Smith
+name: CS373 Spring 2016%3A Shanell Smith
 
 # Short bio or description (displayed in the header)
 description: Computer Science Student at the University of Texas and Texas Digital Library Help Desk
