--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: CS373 Spring 2016&#58; Shanell Smith
 
 # Short bio or description (displayed in the header)
-description: Computer Science Student at the University of Texas and Texas Digital Library Help Desk
+description: Computer Science Student at the University of Texas
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars3.githubusercontent.com/u/16859930?v=3&s=460
 
 #
 # Flags below are optional
